# IMPACTOR

./: README.md
impactor/impact_control/: CMakeLists.txt  package.xml
impactor/impact_control/config/: model.yaml  model_hybird.yaml  model_sim.yaml  mpc.yaml  mpc_onboard.yaml  mpc_sim.yaml
impactor/impact_control/include/: flatness.h  force_estimator.hpp  lbfgs.hpp  lowpassfilter2p.h  mpc_controller.h  mpc_fsm.h  mpc_input.h  mpc_params.h  mpc_wrapper.h  multi_optimization_based_force_estimator.hpp  multi_optimization_based_force_estimator_min_length.hpp  optimization_based_force_estimator.hpp  optimization_based_force_estimator_lbfgs.hpp  polynomial_trajectory.h
impactor/impact_control/launch/: mpc.launch  mpc_onboard.launch
impactor/impact_control/model/: CMakeCache.txt  CMakeLists.txt  FindACADO.cmake  Makefile  README.md  Yaml.cpp  Yaml.hpp  cmake_install.cmake  hybird_quadrotor_payload_mpc_codegen  quadrotor_payload_mpc.cpp  quadrotor_payload_mpc_codegen  quadrotor_payload_mpc_hybird.cpp  quadrotor_payload_mpc_with_ext_force.cpp  quadrotor_payload_mpc_with_ext_force_codegen
impactor/impact_control/model/hybird_quadrotor_payload_mpc/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
impactor/impact_control/model/quadrotor_payload_mpc/: acado_auxiliary_functions.c  (+3 more)
impactor/impact_control/src/: mpc_controller.cpp  mpc_controller_node.cpp  mpc_fsm.cpp  mpc_input.cpp  mpc_wrapper.cpp
impactor/impact_plan/: CMakeLists.txt  package.xml
impactor/impact_plan/include/alm/: alm_opt.hpp  lbfgs.hpp  minco.hpp
impactor/impact_plan/include/manager/: global_plan.h  plan_manager.h
impactor/impact_plan/include/map/: grid_map.h  raycast.h  voxel_dilater.hpp  voxel_map.hpp
impactor/impact_plan/include/path_finder/: dyn_a_star.h
impactor/impact_plan/include/poly_traj/: root_finder.hpp  trajectory.hpp
impactor/impact_plan/include/utils/: flatness.hpp  visualizer.hpp
impactor/impact_plan/launch/: grid_map.yaml  impactor.launch  impactor.rviz  payload_manager.yaml  payload_opt.yaml  payload_plan.launch  scenario1.yaml  simulator.xml
impactor/impact_plan/msg/: PolyTraj.msg  PolynomialTraj.msg
impactor/impact_plan/src/alm/: alm_opt.cpp  minco.cpp
impactor/impact_plan/src/manager/: global_plan.cpp  plan_manager.cpp  plan_node.cpp  traj_server.cpp
impactor/impact_plan/src/map/: grid_map.cpp  raycast.cpp
impactor/impact_plan/src/path_finder/: dyn_a_star.cpp
impactor/impact_plan/src/poly_traj/: trajectory.cpp
impactor/impact_plan/src/utils/: visualizer.cpp
impactor/impact_sim/: CMakeLists.txt  README.md  package.xml
impactor/impact_sim/config/: config.yaml
impactor/impact_sim/config/model/: capsule.frag.xml  capsule_joint.frag.xml  payload.sdf  quadrotor.urdf
impactor/impact_sim/scripts/: build_payload_diagram.py  client.py  drake_sim_diagram.py  leaf_systems.py  main.py  quadrotor_diagram.py  rope_utils.py  transform_utils.py
impactor/uav_simulator/fake_drone/: CMakeLists.txt  package.xml
impactor/uav_simulator/local_sensing/: CMakeLists.txt  package.xml
impactor/uav_simulator/mockamap/: CMakeLists.txt  README.md  package.xml
impactor/uav_simulator/so3_controller/: CMakeLists.txt  nodelet_plugin.xml  package.xml
impactor/uav_simulator/so3_quadrotor/: CMakeLists.txt  nodelet_plugin.xml  package.xml
impactor/uav_simulator/uav_simulator/: CMakeLists.txt  package.xml
impactor/utils/env_generator/: CMakeLists.txt  package.xml
impactor/utils/env_generator/include/env_generator/: env_generator.hpp
impactor/utils/env_generator/src/: env_generator.cpp
impactor/utils/odom_visualization/: CMakeLists.txt  mainpage.dox  package.xml
impactor/utils/pose_utils/: CMakeLists.txt  package.xml
impactor/utils/quadrotor_msgs/: CMakeLists.txt  package.xml
impactor/utils/rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
impactor/utils/uav_utils/: CMakeLists.txt  package.xml
(+73 files in other folders)
